--- a/SnowballCallendar/src/main/resources/messages.properties
+++ b/SnowballCallendar/src/main/resources/messages.properties
@@ -2,3 +2,5 @@ table.header=Table
 login.login=Login
 login.password=Password
 login.submit=Log in
+NotEmpty.loginCredentials.login=May not be empty
+NotEmpty.loginCredentials.password=May not be empty
