--- a/SnowballCallendar/src/main/resources/messages_pl.properties
+++ b/SnowballCallendar/src/main/resources/messages_pl.properties
@@ -1,4 +1,6 @@
 table.header=Tabelka
 login.login=Login
-login.password=Haslo
+login.password=Has\u0142o
 login.submin=Zaloguj
+NotEmpty.loginCredentials.login=Pole nie mo\u017Ce by\u0107 puste
+NotEmpty.loginCredentials.password=Pole nie mo\u017Ce by\u0107 puste
