--- a/SnowballCallendar/src/main/resources/messages.properties
+++ b/SnowballCallendar/src/main/resources/messages.properties
@@ -2,5 +2,22 @@ table.header=Table
 login.login=Login
 login.password=Password
 login.submit=Log in
+login.header=Log in panel
+login.error=User not found. Wrong login or password.
+menu.users=Users
+users.list=Users
+users.firstName=First name
+users.lastName=Last name
+users.edit=Edit
+users.delete=Delete
+users.newUser=Add new user
+registration.header=User registration form
+registration.register=Register
+registration.update=Update
+registration.cancel=Cancel
 NotEmpty.loginCredentials.login=May not be empty
 NotEmpty.loginCredentials.password=May not be empty
+NotEmpty.user.firstName=May not be empty
+NotEmpty.user.lastName=May not be empty
+NotEmpty.user.loginCredentials.login=May not be empty
+NotEmpty.user.loginCredentials.password=May not be empty
