--- a/SnowballCallendar/src/main/resources/messages_pl.properties
+++ b/SnowballCallendar/src/main/resources/messages_pl.properties
@@ -1,6 +1,23 @@
 table.header=Tabelka
 login.login=Login
 login.password=Has\u0142o
-login.submin=Zaloguj
+login.submit=Zaloguj
+login.header=Panel logowania
+login.error=Nie znaleziono u\u017Cytkownika. B\u0142\u0119dny login lub has\u0142o.
+menu.users=U\u017Cytkownicy
+users.list=Lista u\u017Cytkowników
+users.firstName=Imi\u0119
+users.lastName=Nazwisko
+users.edit=Edytuj
+users.delete=Usu\u0144
+users.newUser=Dodaj nowego u\u017Cytkownka
+registration.header=Formularz u\u017Cytkownika
+registration.register=Wy\u015Blij
+registration.update=Aktualizuj
+registration.cancel=Anuluj
 NotEmpty.loginCredentials.login=Pole nie mo\u017Ce by\u0107 puste
 NotEmpty.loginCredentials.password=Pole nie mo\u017Ce by\u0107 puste
+NotEmpty.user.firstName=Pole nie mo\u017Ce by\u0107 puste
+NotEmpty.user.lastName=Pole nie mo\u017Ce by\u0107 puste
+NotEmpty.user.loginCredentials.login=Pole nie mo\u017Ce by\u0107 puste
+NotEmpty.user.loginCredentials.password=Pole nie mo\u017Ce by\u0107 puste
