--- a/SnowballCallendar/src/main/resources/messages.properties
+++ b/SnowballCallendar/src/main/resources/messages.properties
@@ -15,6 +15,7 @@ registration.header=User registration form
 registration.register=Register
 registration.update=Update
 registration.cancel=Cancel
+registration.role=Role
 NotEmpty.loginCredentials.login=May not be empty
 NotEmpty.loginCredentials.password=May not be empty
 NotEmpty.user.firstName=May not be empty
