--- a/SnowballCallendar/src/main/resources/messages_pl.properties
+++ b/SnowballCallendar/src/main/resources/messages_pl.properties
@@ -15,6 +15,7 @@ registration.header=Formularz u\u017Cytkownika
 registration.register=Wy\u015Blij
 registration.update=Aktualizuj
 registration.cancel=Anuluj
+registration.role=Uprawnienia
 NotEmpty.loginCredentials.login=Pole nie mo\u017Ce by\u0107 puste
 NotEmpty.loginCredentials.password=Pole nie mo\u017Ce by\u0107 puste
 NotEmpty.user.firstName=Pole nie mo\u017Ce by\u0107 puste
