--- a/SnowballCallendar/src/main/resources/messages.properties
+++ b/SnowballCallendar/src/main/resources/messages.properties
@@ -5,6 +5,8 @@ login.submit=Log in
 login.header=Log in panel
 login.error=User not found. Wrong login or password.
 menu.users=Users
+menu.loggedAs=Logged as 
+menu.logout=Log out
 users.list=Users
 users.firstName=First name
 users.lastName=Last name
