--- a/SnowballCallendar/src/main/resources/messages.properties
+++ b/SnowballCallendar/src/main/resources/messages.properties
@@ -13,11 +13,17 @@ users.lastName=Last name
 users.edit=Edit
 users.delete=Delete
 users.newUser=Add new user
+users.schedule=Schedule
 registration.header=User registration form
 registration.register=Register
 registration.update=Update
 registration.cancel=Cancel
 registration.role=Role
+schedule.monday=Monday
+schedule.tuesday=Tuesday
+schedule.wednesday=Wednesday
+schedule.thursday=Thursday
+schedule.friday=Fryday
 NotEmpty.loginCredentials.login=May not be empty
 NotEmpty.loginCredentials.password=May not be empty
 NotEmpty.user.firstName=May not be empty
