--- a/SnowballCallendar/src/main/resources/messages_pl.properties
+++ b/SnowballCallendar/src/main/resources/messages_pl.properties
@@ -13,11 +13,17 @@ users.lastName=Nazwisko
 users.edit=Edytuj
 users.delete=Usu\u0144
 users.newUser=Dodaj nowego u\u017Cytkownka
+users.schedule=Grafik
 registration.header=Formularz u\u017Cytkownika
 registration.register=Wy\u015Blij
 registration.update=Aktualizuj
 registration.cancel=Anuluj
 registration.role=Uprawnienia
+schedule.monday=Poniedzia\u0142ek
+schedule.tuesday=Wtorek
+schedule.wednesday=\u015Aroda
+schedule.thursday=Czwartek
+schedule.friday=Pi\u0105tek
 NotEmpty.loginCredentials.login=Pole nie mo\u017Ce by\u0107 puste
 NotEmpty.loginCredentials.password=Pole nie mo\u017Ce by\u0107 puste
 NotEmpty.user.firstName=Pole nie mo\u017Ce by\u0107 puste
