--- a/SnowballCallendar/src/main/resources/messages.properties
+++ b/SnowballCallendar/src/main/resources/messages.properties
@@ -23,7 +23,8 @@ schedule.monday=Monday
 schedule.tuesday=Tuesday
 schedule.wednesday=Wednesday
 schedule.thursday=Thursday
-schedule.friday=Fryday
+schedule.friday=Friday
+schedule.save=Save
 NotEmpty.loginCredentials.login=May not be empty
 NotEmpty.loginCredentials.password=May not be empty
 NotEmpty.user.firstName=May not be empty
