--- a/SnowballCallendar/src/main/resources/messages_pl.properties
+++ b/SnowballCallendar/src/main/resources/messages_pl.properties
@@ -24,6 +24,7 @@ schedule.tuesday=Wtorek
 schedule.wednesday=\u015Aroda
 schedule.thursday=Czwartek
 schedule.friday=Pi\u0105tek
+schedule.save=Zapisz
 NotEmpty.loginCredentials.login=Pole nie mo\u017Ce by\u0107 puste
 NotEmpty.loginCredentials.password=Pole nie mo\u017Ce by\u0107 puste
 NotEmpty.user.firstName=Pole nie mo\u017Ce by\u0107 puste
