Schedule - add time

--- a/SnowballCallendar/src/main/resources/messages.properties
+++ b/SnowballCallendar/src/main/resources/messages.properties
@@ -25,6 +25,10 @@ schedule.wednesday=Wednesday
 schedule.thursday=Thursday
 schedule.friday=Friday
 schedule.save=Save
+schedule.addTime=Add work time
+schedule.startTime=Start time
+schedule.endTime=End time
+schedule.weekDay=Week day
 NotEmpty.loginCredentials.login=May not be empty
 NotEmpty.loginCredentials.password=May not be empty
 NotEmpty.user.firstName=May not be empty
