--- a/SnowballCallendar/src/main/resources/messages_pl.properties
+++ b/SnowballCallendar/src/main/resources/messages_pl.properties
@@ -25,6 +25,10 @@ schedule.wednesday=\u015Aroda
 schedule.thursday=Czwartek
 schedule.friday=Pi\u0105tek
 schedule.save=Zapisz
+schedule.addTime=Dodawanie czasu pracy
+schedule.weekDay=Dzie\u0144 tygodnia
+schedule.startTime=Godzina rozpocz\u0119cia
+schedule.endTime=Godzina zako\u0144czenia
 NotEmpty.loginCredentials.login=Pole nie mo\u017Ce by\u0107 puste
 NotEmpty.loginCredentials.password=Pole nie mo\u017Ce by\u0107 puste
 NotEmpty.user.firstName=Pole nie mo\u017Ce by\u0107 puste
