--- a/SnowballCallendar/src/main/resources/messages_pl.properties
+++ b/SnowballCallendar/src/main/resources/messages_pl.properties
@@ -5,6 +5,7 @@ login.submit=Zaloguj
 login.header=Panel logowania
 login.error=Nie znaleziono u\u017Cytkownika. B\u0142\u0119dny login lub has\u0142o.
 menu.users=U\u017Cytkownicy
+menu.calendar=Kalendarz
 menu.loggedAs=Zalogowany jako 
 menu.logout=Wyloguj
 users.list=Lista u\u017Cytkowników
