Customers and event types

--- a/SnowballCallendar/src/main/resources/messages.properties
+++ b/SnowballCallendar/src/main/resources/messages.properties
@@ -4,8 +4,11 @@ login.password=Password
 login.submit=Log in
 login.header=Log in panel
 login.error=User not found. Wrong login or password.
+menu.administration=Administration
+menu.eventTypes=Event types
 menu.users=Users
 menu.calendar=Calendar
+menu.customers=Customers
 menu.loggedAs=Logged as 
 menu.logout=Log out
 users.list=Users
