--- a/SnowballCallendar/src/main/resources/messages_pl.properties
+++ b/SnowballCallendar/src/main/resources/messages_pl.properties
@@ -4,8 +4,11 @@ login.password=Has\u0142o
 login.submit=Zaloguj
 login.header=Panel logowania
 login.error=Nie znaleziono u\u017Cytkownika. B\u0142\u0119dny login lub has\u0142o.
+menu.administration=Administracja
+menu.eventTypes=Typy wydarze\u0144
 menu.users=U\u017Cytkownicy
 menu.calendar=Kalendarz
+menu.customers=Klienci
 menu.loggedAs=Zalogowany jako 
 menu.logout=Wyloguj
 users.list=Lista u\u017Cytkowników
