--- a/SnowballCallendar/src/main/resources/messages.properties
+++ b/SnowballCallendar/src/main/resources/messages.properties
@@ -1,3 +1,6 @@
+eventType.name=Name
+eventType.color=Color
+eventType.newEventType=Add event type
 table.header=Table
 login.login=Login
 login.password=Password
