--- a/SnowballCallendar/src/main/resources/messages_pl.properties
+++ b/SnowballCallendar/src/main/resources/messages_pl.properties
@@ -1,3 +1,6 @@
+eventType.name=Nazwa
+eventType.color=Kolor
+eventType.newEventType=Dodaj typ wydarzenia
 table.header=Tabelka
 login.login=Login
 login.password=Has\u0142o
