--- a/SnowballCallendar/src/main/resources/messages.properties
+++ b/SnowballCallendar/src/main/resources/messages.properties
@@ -1,3 +1,8 @@
+customers.firstName=First Name
+customers.lastName=Last Name
+customers.phone=Phone
+customers.email=E-mail
+deleteConfirmation.msg=Do you want to remove?
 eventType.name=Name
 eventType.color=Color
 eventType.newEventType=Add event type
@@ -36,6 +41,8 @@ schedule.addTime=Add work time
 schedule.startTime=Start time
 schedule.endTime=End time
 schedule.weekDay=Week day
+success.msg=Success
+success.return=Return
 NotEmpty.loginCredentials.login=May not be empty
 NotEmpty.loginCredentials.password=May not be empty
 NotEmpty.user.firstName=May not be empty
