--- a/SnowballCallendar/src/main/resources/messages_pl.properties
+++ b/SnowballCallendar/src/main/resources/messages_pl.properties
@@ -1,3 +1,8 @@
+customers.firstName=Imi\u0119
+customers.lastName=Nazwisko
+customers.phone=Telefon
+customers.email=E-mail
+deleteConfirmation.msg=Czy na pewno chcesz usun\u0105\u0107?
 eventType.name=Nazwa
 eventType.color=Kolor
 eventType.newEventType=Dodaj typ wydarzenia
@@ -36,6 +41,8 @@ schedule.addTime=Dodawanie czasu pracy
 schedule.weekDay=Dzie\u0144 tygodnia
 schedule.startTime=Godzina rozpocz\u0119cia
 schedule.endTime=Godzina zako\u0144czenia
+success.msg=Operacja powiod\u0142a si\u0119
+success.return=Wró\u0107
 NotEmpty.loginCredentials.login=Pole nie mo\u017Ce by\u0107 puste
 NotEmpty.loginCredentials.password=Pole nie mo\u017Ce by\u0107 puste
 NotEmpty.user.firstName=Pole nie mo\u017Ce by\u0107 puste
